@@ -5,6 +5,7 @@
 === 1.0.19 ===
 * Added test build for Windows using MSYS2.
 * More strict syntax for test asserts.
+* Updated build scripts.
 
 === 1.0.18 ===
 * Fixed invalid version in header files.
